fix: fix tabs overflow issues and focus issues (#149)
* fix: remove auto focusing tabs

* fix: re-instate tab focus but only when selected state has changed

* fix: only hide overflow when not animating tabs to account for dropdowns

* fix: add ability to set panel-container height based on childnode

* fix: also calculate container height when it hasnt yet been set

* fix: allow passing z-index to tabs & set position

* fix: remove setContainerHeight to leave to consumer

* docs: add zIndex to tabs

* fix: also set widths for overflow when swiping and fix zIndex proptype

* test: updated tabs tests to account for new overflow logic

* chore: remove unused ref in TabPanel

* chore: fix typo


* fix: remove zIndex so it can just be exposed via CSS

* chore: remove zIndex in docs

--- a/packages/components/src/tabs/Tabs.less
+++ b/packages/components/src/tabs/Tabs.less
@@ -9,6 +9,8 @@
 @line-thickness: 3px;
 
 .tabs {
+  position: relative;
+
   &__tab {
     display: inline-block;
     cursor: pointer;
@@ -29,9 +31,22 @@
       cursor: not-allowed;
     }
 
-    &:hover,
     &:focus {
       color: @brand-light-blue;
+    }
+
+    // Show hover style for all large screens (to account for the fact that IE does not support the below property)
+    @media (min-width: @screen-lg) {
+      &:hover {
+        color: @brand-light-blue;
+      }
+    }
+
+    // Otherwise, if this query is supported, show hover style for any client that supports :hover
+    @media (hover: hover) {
+      &:hover {
+        color: @brand-light-blue;
+      }
     }
   }
 
@@ -50,7 +65,6 @@
 
   &__panel-container {
     width: 100%;
-    overflow: hidden;
   }
 
   &__slider {
